2015-01-27  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-compat.el (fboundp): Avoid compilation error on XEmacs.

	* nnir.el (nnir-imap-expr-to-imap): Check for literal+ capability in
	IMAP.

2015-01-27  Eric Abrahamsen  <eric@ericabrahamsen.net>

	* nnir.el (nnir-run-imap): Enable non-ASCII IMAP searches.

	* nnmairix.el ("nnmairix"): Declare nnmairix as virtual.

	* gnus-bcklg.el (gnus-backlog-enter-article): No virtual groups should
	be added to the backlog.

2015-01-26  Tassilo Horn  <tsdh@gnu.org>

	* Makefile.in (all total, warn, fail-on-warning): Call gnus-load.el
	target with a recursive make call.

2015-01-26  Trevor Murphy  <trevor.m.murphy@gmail.com>

	* nnimap.el (nnimap-header-parameters): Refactor and request
	X-GM-LABELS if it's been announced.
	(nnimap-transform-headers): Gather and output GM-LABELS.

2014-12-30  Peder O. Klingenberg  <peder@klingenberg.no>

	* mm-decode.el (mm-display-part): Make non-string methods work.
	Non-string methods are funcalled and work just fine, the test was
	bogus.
	* mm-decode.el (mm-display-external): Show "external" lisp viewers in
	whole frame.

2015-01-26  Lars Ingebrigtsen  <larsi@gnus.org>

	* nnimap.el (nnimap-request-accept-article): Allow respooling using
	nnimap.

	* gnus-group.el (gnus-group-get-new-news-this-group): Explicitly
	request rescans when being run interactively.

	* nnimap.el (nnimap-request-group): Don't rescan the group here,
	because that can be very slow in large groups.

	* gnus-int.el (gnus-request-group-scan): New backend function.

	* nnimap.el (nnimap-request-scan-group): Implement in on IMAP.

2015-01-25  Lars Ingebrigtsen  <larsi@gnus.org>

	* gnus-group.el (gnus-group-suspend): Close all backends.

2015-01-19  Paul Eggert  <eggert@cs.ucla.edu>

	* dgnushack.el (dgnushack-compile-file): New function.
	(dgnushack-compile): Use it (bug#19514).

2015-01-15  Lars Magne Ingebrigtsen  <larsi@gnus.org>

	* nntp.el (nntp-send-authinfo): Error out if the password is wrong.
